fixed FavouritesButton (flashing issue on iPhone)

--- a/src/components/Buttons/FavouritesButton/FavouritesButton.module.scss
+++ b/src/components/Buttons/FavouritesButton/FavouritesButton.module.scss
@@ -66,3 +66,9 @@
 		}
 	}
 }
+
+// Отключаем hover при disableHover
+.noHover:hover .heart::before {
+	color: inherit !important;
+	text-shadow: inherit !important;
+}
